=== fitdistrplus : Help to fit of a parametric distribution ===

Version 1.0-7
=============

NEW FEATURES
- start the JSS splitting vignette into how-to guides.
- start likelihood surface/curve.
- provide parallization of bootstrap in bootdist and bootdistcens

BUG FIXES
- add invisible() for all graphical functions.


Version 1.0-6
=============

BUG FIXES
- automatic definition of starting values for distributions "llogis" and "invweibull"
is now working.

Version 1.0-5
=============
NEW FEATURES
- update starting/fixing values in mledist, mmedist, mgedist, qmedist functions.
- update graphics for bootstrap procedure.
- add argument do.points in cdfcomp.
- add argument weights in mledist, qmedist, mmedist, fitdist, fitdistcens.
- add argument keepdata in fitdist, fitdistcens.
- suppress warnings/errors in fitdist(cens), bootdist(cens).

BUG FIXES
- defensive programming in plotdist, cdfcomp,...
- simplify plotting curves in cdfcomp where seq(xmin, xmax, by=1) was used.

Version 1.0-4
=============
- release for the JSS publication.

Version 1.0-3
=============

NEW FEATURES
- new generic functions for fitdist(cens): loglik, vcov and coef.
- vignette updated to the version of a paper accepted by the 
Journal of Statistical Software.
- add of an argument discrete in fitdist in order to be able to take into
account non classical discrete distributions while plotting the fit with plot.fitdist or cdfcomp 
and while calculating goodness-of-fit statistics with gofstat (add of an example : fit of a zero
inflate Poisson distribution).
- add of an S3 class for descdist and a print method.

BUG FIXES
- fitdist can handle non invertible Hessian matrices.
- 


Version 1.0-2
=============

NEW FEATURES
- plotdist can plot empirical density as an histogram, a density plot 
or both superimposed.
- a strong warning was added to the documentation of function descdist
about the problematic high variance of skewness and kurtosis.

BUG FIXES